--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-09  Michael Gogins <gogins@pipeline.com>
+
+      * Added high-level "C" API for CsoundVST 
+       (frontends/CsoundVST/csoundvst_api.h and .c).
+
+2004-05-07  Michael Gogins <gogins@pipeline.com>
+
+      * Fixed some bugs in rtpa.c to enable lower-latency
+        real-time audio.
+
 2004-05-05  Michael Gogins <gogins@pipeline.com>
 
       * Fixed Fl_graph.cpp and widgets.cpp event handling with 
