--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-16  Michael Gogins <gogins@pipeline.com>
+
+	* frontends/CsoundVST/CsoundVstFltk.cpp: fixed problem
+    with linefeeds in message lines.
+
 2004-05-12  John ffitch  <jpff@codemist.co.uk>
 
 	* SConstruct: Set makeDynamic=1 for linux
