--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-17  John  <jpff@cage.codemist.co.uk>
+
+	* Top/main.c (install_signal_handler): Retore signal handling
+
 2004-05-17  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/rtpa.c (playopen_): Allow selection of ALSA device via
