--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2004-05-17  John  <jpff@codemist.co.uk>
+2004-05-17  John  <jpff@cage.codemist.co.uk>
 
 	* SConstruct: Use -Wl,-Bdynamic as it is  linker option 
 
