--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-16  Michael Gogins <gogins@pipeline.com>
+    
+    * Amended SConstruct to keep a list of all dependencies to make sure
+    that zipfiles get built at the very end.
+    
+    * Updated csound.pdf with information about -odac:xxx on ALSA.
+
 2004-05-20  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/rtpa.c (playopen_): Decode dac:xxx rather than environment
