--- a/csound.tex
+++ b/csound.tex
@@ -475,16 +475,11 @@ This is a ``to do'' list, not necessarily complete, for Csound and CsoundVST:
 \begin{enumerate}
 \item In preparation for a beta file release package:
 \begin{enumerate}
-\item Complete this document sufficiently to get users started building and running Csound and CsoundVST with MinGW and Linux.
-\item Get MIDI input and output working better on Windows (that is, a lower latency for PortAudio).
+\item Get the ASIO version of PortAudio working on Windows.
 \end{enumerate}
 \item Longer term:
 \begin{enumerate}
-\item Gabriel's Python opcodes.
-\item The Loris plugin opcodes.
-\item The ATS opcodes.
-\item The STK plugin opcodes.
-\item Investigate the Python runtime situation on MinGW.
+\item Implement either Loris or ATS as both Python extension module and plugin opcodes.
 \end{enumerate}
 \end{enumerate}
 
