--- a/csound.tex
+++ b/csound.tex
@@ -169,6 +169,27 @@ pluginEnvironment.SharedLibrary('xxx',
 \item Run the Csound 5 build in the regular way.
 \end{enumerate}		
 
+\subsection{About OENTRY}
+
+OENTRY's follow this format:
+
+opcodeName, dspace, thread, outarg, inargs, isub, ksub, asub, dsub
+  
+
+dspace - the size field is used as a flag in saying what types of polymorphism are allowed (look at Engine/entry1.c and Engine/rdorch.c)
+
+	0xffff means that the first argument type determines which opcode is
+actually being used, XXX -> XXX_a or XXX_i or XXX_k
+
+	0xfffe means that the first two argument types determine the actual
+opcode.  So XXX -> XXX_aa, XXX_ak, XXX_ka, and XXX_kk.  Think oscil
+
+	0xfffd looks at one argument but does not allow i type (eg peak)
+
+	0xfffc is rather like 0xfffe but deals with divz -- so allows a, k and
+i arguments
+
+
 \section{Using}
 
 Assuming that you have installed and configured the software, Csound and CsoundVST can be operated in a variety of modes and configurations. The \texttt{.csd} and \texttt{.py} files in the \texttt{examples} demonstrate a few of these modes of operation. Some of these scores are simple, others are moderately complex. 
